--- a/app/components/search/search.component.html
+++ b/app/components/search/search.component.html
@@ -1,1 +1,11 @@
-SEARCH
+<h1>Need Music?</h1>
+<p class="lead">
+    Use the ngSpotify app to browse new release and find your favourite songs. All you get is this text and mostly barebones HTML document.
+</p>
+
+<form>
+    <div class="form-group">
+        <input class="form-control" type="text" placeholder="Search Artist..." [(ngModel)]="searchStr" name="searchStr" (keyup)="searchMusic()" />
+    </div>
+
+</form>
