--- a/app/components/search/search.component.html
+++ b/app/components/search/search.component.html
@@ -9,3 +9,22 @@
     </div>
 
 </form>
+
+<!--Result for search-->
+<div *ngIf="searchRes">
+    <div *ngFor="let artist of searchRes">
+        <div class="row">
+            <div class="col-md-12">
+                <div class="search-res well">
+                    <h4><a routerLink="/artist/{{artist.id}}">{{artist.name}}</a></h4>
+                    <div>
+                        <strong>Genre: </strong>
+                        <span *ngFor="let genre of artist.genres">
+                            {{genre}}
+                        </span>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
